Continue work on design tools