@@ -64,7 +64,11 @@
 					<!-- The argLine and systemPropertyVariables should match the failsafe configuration below -->
 					<argLine>
 						--add-opens=com.avereon.cartesia/com.avereon.cartesia=ALL-UNNAMED
+						--add-opens=com.avereon.cartesia/com.avereon.cartesia.cursor=ALL-UNNAMED
+						--add-opens=com.avereon.cartesia/com.avereon.cartesia.data=ALL-UNNAMED
 						--add-opens=com.avereon.cartesia/com.avereon.cartesia.geometry=ALL-UNNAMED
+						--add-opens=com.avereon.cartesia/com.avereon.cartesia.icon=ALL-UNNAMED
+						--add-opens=com.avereon.cartesia/com.avereon.cartesia.tool=ALL-UNNAMED
 					</argLine>
 				</configuration>
 			</plugin>
